OBE-23 Wildcard matching and implementing FilterParams